# kiro-acp

./: Cargo.toml  README.md  spec.md
src/: agent.rs  main.rs
src/bridge/: mod.rs  process.rs
src/protocal/: message.rs  mod.rs
